# coralia

./: .eslintrc.cjs  .gitignore  README.md  dprint.json  index.html  notes.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  AudioPlayer.tsx  Contexts.tsx  CustomAudio.tsx  HomeScreen.tsx  MusicFooter.tsx  MusicGrid.tsx  MusicGridAlbum.tsx  Seekbar.tsx  SideBar.tsx  index.css  types.ts
src-tauri/: Cargo.toml  TODO.md  collection.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: album.rs  app.rs  collection.rs  data.rs  events.rs  library.rs  main.rs  music.rs  song.rs  utils.rs
src-tauri/src/data/: album.rs  artwork.rs  library.rs  mod.rs  music_tags.rs  settings.rs  song.rs
src-tauri/src/music/: album.rs  mod.rs  music_tags.rs  song.rs
src-tauri/src/player/: audio.rs
src/api/: commands.ts  importer.ts  musicData.ts
src/components/: AlbumView.tsx  FilterBar.tsx  HomeScreen.tsx  LibraryBody.tsx  MenuBar.tsx  MusicFooter.tsx  MusicGrid.tsx  MusicGridAlbum.tsx  PlayButtons.tsx  QueueBar.tsx  QueueListItem.tsx  QueuePopup.tsx  SearchBar.tsx  SearchView.tsx  Seekbar.tsx  SideBar.tsx  SongInfoFooter.tsx  SongList.tsx  SongListHeader.tsx  SongListHeaderDense.tsx  SongListItem.tsx  SongListItemDense.tsx  VolumeController.tsx
src/components/Popups/: ErrorPopup.tsx  SongPopup.tsx
src/components/Settings/: AppearanceSettings.tsx  LibrarySettings.tsx  SettingsSidebar.tsx
src/components/Sidebars/: MenuBar.tsx  MusicFooter.tsx  QueueBar.tsx  QueueList.tsx  QueueListItem.tsx
src/components/SongControls/: CurrentSongInfo.tsx  PlayButtons.tsx  Seekbar.tsx  VolumeController.tsx
src/components/UI/: BackgroundCard.tsx
src/data/: importer.ts  types.ts
src/hooks/: AudioPlayer.ts
src/screens/: AlbumScreen.tsx  FullscreenScreen.tsx  HomeScreen.tsx  LibraryPage.tsx  LibraryScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx
src/types/: apiTypes.ts
