[package]
name = "app"
version = "0.1.0"
authors = ["you"]
default-run = "app"
edition = "2021"
license = ""
repository = ""
rust-version = "1.60"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
dirs = "5.0.1"
glob = "0.3.1"
lofty = "0.20.0"
rodio = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-core = "0.5.4"
symphonia-metadata = "0.5.4"
tauri = { version = "1.6.2", features = ["fs-all", "path-all", "protocol-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
