[package]
name = "app"
version = "0.1.0"
authors = ["you"]
default-run = "app"
edition = "2021"
license = ""
repository = ""
rust-version = "1.67"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crossbeam = "0.8.2"
dirs = "5.0.1"
env_logger = "0.10.2"
fast_image_resize = { version = "5.1.0", features = ["image"] }
glob = "0.3.1"
image = "0.25.5"
lofty = "0.20.0"
log = "0.4.22"
rand = "0.8.5"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
souvlaki = "0.7.0"
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-core = "0.5.4"
symphonia-metadata = "0.5.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tokio = "1.29.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
